# PluginHost

./: .gitignore  .gitmodules  CMakeLists.txt  CircularBuffer.h  PlayHead.h  PluginEditorWindow.cpp  PluginEditorWindow.h  PluginHost.cpp  PluginHost.h  PluginHost.vcxproj  QWERTYMidiWindow.h  README.md  Utilities.h  comprehensive_test.ck  helloworld.ck  makefile  makefile.mac  makefile.win  midi_expressive.ck  param_modulation.ck  pluginState  plugin_chain.ck  transport_sync.ck
JuceStaticLib/: JuceStaticLib.jucer
tests/: comprehensive_test.ck  destroy.ck  helloworld.ck  midi_expressive.ck  param_modulation.ck  plugin_chain.ck  test_plugin_state  transport_sync.ck
